Fixed header overflow bug

--- a/dev/scss/layout/_header.scss
+++ b/dev/scss/layout/_header.scss
@@ -4,6 +4,7 @@
 .page-head {
   color: #fff;
   height: 90%;
+  overflow: hidden;
   position: relative;
 }
 .main-nav {
